# helio-kernel-code

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  demo.sh  helio.proto  helio_manifest.sig.json  test_rand.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
kernel/: lib.rs  proto.rs  sandbox_scratch.rs
kernel/provenance/: merkle_dag.rs
kernel/runtime/: wasm_shim.rs
payload/: Cargo.toml
payload/src/: main.rs
src/: main.rs
tests/: integration_test.rs
