[package]
name = "helio-kernel"
version = "0.1.0"
edition = "2021"

[lib]
path = "kernel/lib.rs"

[dependencies]
wasmtime = "14.0.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
prost = "0.12"
bytes = "1.11.1"
wasmtime-wasi = "14.0.0"
anyhow = "1.0.102"
wasmtime-wasi-io = "42.0.1"

[build-dependencies]
prost-build = "0.14.3"

[dev-dependencies]
wat = "1.245.1"
