[package]
name = "helio-kernel"
version = "0.1.0"
edition = "2021"

[lib]
path = "kernel/lib.rs"

[[bin]]
name = "helio"
path = "src/main.rs"

[dependencies]
wasmtime = "24.0.6"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
prost = "0.12"
bytes = "1.11.1"
wasmtime-wasi = "24.0.6"
anyhow = "1.0.102"
wasmtime-wasi-io = "42.0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.10"
rand_core = "0.6"
clap = { version = "4.5.60", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[build-dependencies]
prost-build = "0.14.3"

[dev-dependencies]
wat = "1.245.1"
